--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "description": "The Bootstrap Tooltip plugin JS, for destroy tooltip automatically.",
   "main": "btooltip.js",
   "dependencies": {
-    "jquery": ">= 1.9.0"
+    "jquery": ">= 1.9.1",
+    "bootstrap": "~3.3.2"
   },
   "keywords": [
     "btooltip",
