--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-gh-pages": "^0.9.1",
     "grunt-install-dependencies": "^0.2.0",
     "grunt-notify": "^0.3.1"
+  },
+  "scripts": {
+    "test": "grunt --verbose"
   }
 }
